@@ -439,12 +439,14 @@ void PTools::setDestImage(Image & image, Diff2D size,
     case PanoramaOptions::SINUSOIDAL:
         image.format = _sinusoidal;
         break;
+#ifdef HasPANO13
     case PanoramaOptions::LAMBERT:
         image.format = _lambert;
         break;
     case PanoramaOptions::LAMBERT_AZIMUTHAL:
         image.format = _lambertazimuthal;
         break;
+#endif
     default:
         PrintError("unsupported projection");
     }
