@@ -29,8 +29,13 @@
 #include "panoinc_WX.h"
 
 extern "C" {
+#ifdef HasPANO13
 #include <pano13/filter.h>
 #include <pano13/queryfeature.h>
+#else
+#include <pano12/filter.h>
+#include <pano12/queryfeature.h>
+#endif
 }
 
 // Error reporting
