@@ -6,7 +6,7 @@
   <body bgcolor="#FFFFFF">
     <center>
       <img src="splash.png"></img><p>
-      <font size=+2>hugin 0.7 alpha</font><br>
+      <font size=+2>hugin</font><br>
       <font size=-1>(http://hugin.sf.net)</font>
       <br>
       napisany przez Pablo d'Angelo
