@@ -1,5 +1,10 @@
 # Tips for hugin
 # These tips are translated via gettext.
+_("Welcome to Hugin.\n To create a panorama, just follow the sequence shown in the assistant tab.")
+_("If the horizon of a panorama is wavy, use the straighten function in the preview window to straighten it")
+_("The Preview window can be used to center the panorama by clicking with the left mouse button. A right click will rotate the panorama")
+_("The Autopano and Autopano-SIFT programs can be used to create control points automatically. Please install one of them if you haven't already done so.")
+_("Sometimes Autopano can not find connections between all images. In this case, control points have to be created manually, using the control points tab.")
 _("To scroll both the images in the control points tab, hold the shift key while moving the mouse.")
 _("The control key or the middle mouse button can be used to pan one image in the control points tab.")
 _("Rotating the camera around the entrance pupil (sometimes also called \"nodal point\") avoids parallax errors and makes panorama creation a lot easier.")
@@ -18,11 +23,10 @@ _("The \"f\" key is the shortcut for Fine Tune button.")
 _("Pressing \"Del\" will remove the currently selected control point.")
 _("Press \"0\" in the control points tab to zoom out to full view.")
 _("Press \"1\" in the control points tab to zoom out to 100% view.")
-_("The external tools autopano and autopano-sift can be used to create control points automatically.")
 _("Enblend can be used to smoothly blend the panorama. Use it from within hugin by selecting \"high quality tiff file\" as output.")
 _("After enblend has blended the panorama, the remapped output images (available in the same directory as the panorama image) can be used to retouch the panorama in The Gimp or Photoshop.")
 _("hugin and other free panoramic software is discussed on the ptx email list. http://groups.google.com/group/hugin-ptx")
-_("The Panorama Tools, on which hugin is based were written by Helmut Dersch.")
+_("The Panorama Tools, on which hugin is based were originally written by Helmut Dersch.")
 _("The precision of \"fine tuning\" control points can be improved by enabling rotation search. This is essential for fisheye and wide angle images.")
 _("Multiple images can be selected in the image and lens tabs. Commands will act on all selected images.")
 _("Lens parameters may vary with changing focus. For best results, calibrate the parameters using know settings and reuse them later.")
