@@ -41,14 +41,22 @@ extern "C" {
 #undef __INTEL__
 #endif
 
+#ifdef HasPANO13
 #include <pano13/panorama.h>
+#else
+#include <pano12/panorama.h>
+#endif
 
 #ifdef __INTELMEMO__
 #define __INTEL__
 #undef __INTELMEMO__
 #endif
 
+#ifdef HasPANO13
 #include <pano13/filter.h>
+#else
+#include <pano12/filter.h>
+#endif
 
 }
 
